# keyboard-layout-battles

./: LICENSE  README.md
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  Shuttle.toml  fly.toml  wordlist.json
backend/migrations/2024-02-04-084426_user_tab/: down.sql  up.sql
backend/migrations/2024-03-27-124334_more_layout/: down.sql  up.sql
backend/migrations/2024-04-02-103753_history_index/: down.sql  up.sql
backend/settings/: SettingsDocker.toml  SettingsMalfple.toml
backend/src/: auth.rs  battle_engine.rs  db.rs  error.rs  layout_validation.rs  main.rs  middleware.rs  service.rs  settings.rs  wordlist.rs  words.rs
backend/src/db/: json.rs  mod.rs  model.rs  schema.rs
backend/src/service/: battle.rs  battle_history.rs  layout.rs  mod.rs  user.rs
backend/vsc_rest_client/: battle.http  battle_history.http  layout.http  user.http
frontend/: README.md
klb-frontend/: Dockerfile  README.md  fly.toml  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
klb-frontend/src/: app.postcss  hooks.server.ts
klb-frontend/src/lib/: Key.svelte  KeyMarker.svelte  Keyboard.svelte  ResultPanel.svelte  api.ts  index.ts  schema.ts  stores.ts
klb-frontend/src/lib/api/: battle_history.ts  layout.ts
klb-frontend/src/lib/battle/: BattleInput.svelte  BattleTips.svelte
klb-frontend/src/lib/guide/: KeyboardInputGuide.svelte
klb-frontend/src/lib/keyboard/: KeyMarker.svelte  Keyboard.svelte  KeyboardInput.svelte
klb-frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
klb-frontend/src/routes/battle/: +page.svelte
klb-frontend/src/routes/battle/[id]/: +page.svelte  +page.ts
klb-frontend/src/routes/battle/history/[id]/: +page.ts  (+1 more)
klb-frontend/src/routes/battle/input/: +page.svelte
klb-frontend/src/routes/battle/start/: +page.svelte
klb-frontend/src/routes/guide/: +page.svelte
klb-frontend/src/routes/layout/: +page.svelte
klb-frontend/src/routes/layout/[slug]/: +page.svelte  +page.ts
klb-frontend/src/routes/layouts/: +page.svelte
