[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
bcrypt = "0.15.0"
config = "0.14.0"
dashmap = "5.5.3"
diesel = { version = "2.1.4", features = ["serde_json"] }
diesel-async = { version = "0.4.1", features = ["deadpool", "postgres"] }
jsonwebtoken = "9.2.0"
nanoid = "0.4.0"
rand = "0.8.5"
serde = "1.0.196"
serde_json = "1.0.113"
shuttle-axum = "0.42.0"
shuttle-runtime = "0.42.0"
shuttle-secrets = "0.42.0"
shuttle-shared-db = { version = "0.42.0", features = ["diesel-async", "diesel-async-deadpool", "postgres"] }
skillratings = { version = "0.26.0", features = ["serde"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
